src/test/ui/structs/struct-field-asleep-hint.rs
struct S { pre: i32 }
impl S {
    fn f(self) -> i32 {
        self.prehopjpokppppppppppppppppppp
        //~^ ERROR it seems like you've fallen asleep and hit your keyboard
    }
}

fn main() {}
